add token gen support

--- a/pkg/ui/tmpl/index.html
+++ b/pkg/ui/tmpl/index.html
@@ -116,6 +116,33 @@
 
     </div>
 
+     <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">jwt token test</p>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-sm">
+                <div class="input-group mb-3">
+                    <input id="jwtInput" readonly value="/jwt" type="text" class="form-control"
+                           placeholder="Iframe URL"
+                           aria-label="Iframe URL" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button id="jwtBtn" class="btn btn-primary" type="button">Execute</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div id="jwtResult" class="col-sm">
+
+            </div>
+        </div>
+
+    </div>
+
+
 
     <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">iframe test</p>
     <div class="container">
