--- a/pkg/ui/tmpl/index.html
+++ b/pkg/ui/tmpl/index.html
@@ -55,6 +55,22 @@
         </div>
     </div>
 
+    <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">start oauth2 flow </p>
+
+        <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="input-group mb-3">
+                    <div class="input-group-append">
+                        <a href="/start" class="btn btn-primary" role="button">Start oauth2 flow</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
     <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">http ajax test</p>
 
     <div class="container">
