--- a/pkg/ui/tmpl/index.html
+++ b/pkg/ui/tmpl/index.html
@@ -62,146 +62,12 @@
             <div class="col-sm">
                 <div class="input-group mb-3">
                     <div class="input-group-append">
-                        <a href="/start" class="btn btn-primary" role="button">Start oauth2 flow</a>
+                        <a href="/auth" class="btn btn-primary" role="button">Start oauth2 flow</a>
                     </div>
                 </div>
             </div>
         </div>
 
-    </div>
-
-
-    <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">http ajax test</p>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                <div class="input-group mb-3">
-                    <input id="ajaxInput" value="/api/ping" type="text" class="form-control" placeholder="Iframe URL"
-                           aria-label="Iframe URL" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button id="ajaxIframeBtn" class="btn btn-primary" type="button">Execute</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="container">
-                <table class="table table-hover table-sm">
-                    <thead>
-                    <tr class="row">
-                        <th class="col-2" scope="col">Header Name</th>
-                        <th class="col-10" scope="col">Header Value</th>
-                    </tr>
-                    </thead>
-                    <tbody id="ajaxHeadersResult">
-
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-sm">
-                <textarea readonly style="width: 100%" id="ajaxResult"></textarea>
-            </div>
-        </div>
-    </div>
-
-    <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">web socket test</p>
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-sm">
-                <div class="input-group mb-3">
-                    <input id="wsInput" readonly value="/websocket" type="text" class="form-control"
-                           placeholder="Iframe URL"
-                           aria-label="Iframe URL" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button id="wsBtn" class="btn btn-primary" type="button">Execute</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-sm">
-                <textarea id="wsResult" readonly style="width: 100%"></textarea>
-            </div>
-        </div>
-
-    </div>
-
-    <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">jwt token test</p>
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-sm">
-                <div class="input-group mb-3">
-                    <input id="jwtInput" readonly value="/jwt" type="text" class="form-control"
-                           placeholder="Iframe URL"
-                           aria-label="Iframe URL" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button id="jwtBtn" class="btn btn-primary" type="button">Execute</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div id="jwtResult" class="col-sm">
-
-            </div>
-        </div>
-
-    </div>
-
-    <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">capi legacy token test</p>
-
-    <div class="container">
-
-        <div class="row">
-            <div id="capiResult" class="col-sm">
-                <small class="text-break text-muted">
-                     {
-                        "apiVersion": "v1",
-                        "kind": "Secret",
-                        "metadata": {
-                            "name": "cp-oauth-proxy-tokens-secret",
-                            "namespace": "cnvrg"
-                        },
-                        "data": {
-                            "OAUTH_PROXY_API_KEY": "{{ randAlphaNum 32 | lower | b64enc }}",
-                            "OAUTH_PROXY_API_AUTH_DATA": "{{ randAlphaNum 12 | lower | b64enc }}"
-                        }
-                    }
-                </small>
-            </div>
-        </div>
-
-    </div>
-
-
-    <p style="font-size: 20px; font-weight: bold" class="text-primary text-center">iframe test</p>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                <div class="input-group mb-3">
-                    <input id="iframeInput" type="text" class="form-control" placeholder="Iframe URL"
-                           aria-label="Iframe URL" aria-describedby="basic-addon2">
-                    <div class="input-group-append">
-                        <button id="loadIframeBtn" class="btn btn-primary" type="button">Execute</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm">
-                <iframe id="test-iframe" height="500" width="100%"></iframe>
-            </div>
-        </div>
     </div>
 
 </main>
