--- a/pkg/ui/tmpl/central.html
+++ b/pkg/ui/tmpl/central.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title>{{ .Title }}</title>
-    <link href="/public/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/public/js/jquery-3.6.0.min.js"></script>
-    <script src="/public/js/app.js"></script>
+    <link href="public/css/bootstrap.min.css" rel="stylesheet">
+    <script src="public/js/jquery-3.6.0.min.js"></script>
+    <script src="public/js/app.js"></script>
 </head>
 <body style="background-color: {{ .Color }}">
 
@@ -191,7 +191,7 @@
 </main>
 
 
-<script src="/public/js/bootstrap.bundle.min.js"></script>
+<script src="public/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
